overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   .Content {
     max-width: 900px;
