--- a/src/container/DrawerNavContainer.scss
+++ b/src/container/DrawerNavContainer.scss
@@ -6,6 +6,7 @@ $breakPoint: 800px;
   overflow: hidden;
   width: 100vw;
   max-width: 100vw;
+  height: 100svh;
 
   .drawer-page-container {
     overflow: hidden;
