--- a/src/pages/schnaps/SchnapsContent.scss
+++ b/src/pages/schnaps/SchnapsContent.scss
@@ -12,10 +12,12 @@
 
   img {
     width: 100%;
+    max-width: 100vw;
   }
 
   .header {
     max-width: 900px;
+    width: 100%;
     margin: auto;
 
     .header-img-container {
@@ -51,10 +53,14 @@
     }
 
     .header-text-container {
-      width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 600px;
       transform: translateY(-4rem);
       margin: auto auto -2rem;
-      padding: 1rem 3rem;
+      padding: 1rem 24px;
       background-color: $clr_yellow_light;
 
       h1, h2 {
@@ -73,13 +79,15 @@
       margin-bottom: 1rem;
 
       img {
-        max-width: 80vw;
+        width: 80vw;
+        max-width: 560px;
         display: flex;
         border-radius: 50%;
         margin: 1rem auto;
       }
 
       .text-container {
+        margin: 0 24px;
         display: flex;
         flex-direction: column;
 
